--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,8 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(pico-spotify-controller pico-spotify-controller.c )
+add_executable(pico-spotify-controller pico-spotify-controller.c 
+display.c)
 
 pico_set_program_name(pico-spotify-controller "pico-spotify-controller")
 pico_set_program_version(pico-spotify-controller "0.1")
@@ -46,7 +47,8 @@ pico_enable_stdio_usb(pico-spotify-controller 0)
 
 # Add the standard library to the build
 target_link_libraries(pico-spotify-controller
-        pico_stdlib)
+        pico_stdlib
+        hardware_spi)
 
 # Add the standard include files to the build
 target_include_directories(pico-spotify-controller PRIVATE
