--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,59 +1,30 @@
-# Generated Cmake Pico project file
-
 cmake_minimum_required(VERSION 3.13)
 
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(PICO_SDK_FETCH_FROM_GIT ON)
 
-# Initialise pico_sdk from installed location
-# (note this can come from environment, CMake cache etc)
 
-# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
-if(WIN32)
-    set(USERHOME $ENV{USERPROFILE})
-else()
-    set(USERHOME $ENV{HOME})
-endif()
-set(sdkVersion 2.2.0)
-set(toolchainVersion 14_2_Rel1)
-set(picotoolVersion 2.2.0-a4)
-set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
-if (EXISTS ${picoVscode})
-    include(${picoVscode})
-endif()
-# ====================================================================================
-set(PICO_BOARD pico2 CACHE STRING "Board type")
-
-# Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(pico-spotify-controller C CXX ASM)
+project(pico_spotify_controller C CXX ASM)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
-# Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-# Add executable. Default name is the project name, version 0.1
-
-add_executable(pico-spotify-controller pico-spotify-controller.c 
-display.c)
-
-pico_set_program_name(pico-spotify-controller "pico-spotify-controller")
-pico_set_program_version(pico-spotify-controller "0.1")
-
-# Modify the below lines to enable/disable output over UART/USB
-pico_enable_stdio_uart(pico-spotify-controller 0)
-pico_enable_stdio_usb(pico-spotify-controller 0)
-
-# Add the standard library to the build
-target_link_libraries(pico-spotify-controller
-        pico_stdlib
-        hardware_spi)
-
-# Add the standard include files to the build
-target_include_directories(pico-spotify-controller PRIVATE
-        ${CMAKE_CURRENT_LIST_DIR}
+# LIST ALL C FILES HERE
+add_executable(pico_spotify_controller
+    pico-spotify-controller.c
+    display.c
 )
 
-pico_add_extra_outputs(pico-spotify-controller)
+# Enable USB (so we can maybe see the print message later)
+pico_enable_stdio_usb(pico_spotify_controller 1)
+pico_enable_stdio_uart(pico_spotify_controller 0)
 
+target_link_libraries(pico_spotify_controller
+    pico_stdlib
+    hardware_spi
+)
+
+# Create the UF2 file
+pico_add_extra_outputs(pico_spotify_controller)
